Fixed Swagger and UI
